# rust_web_development_with_rocket

./: .env  Cargo.toml  Rocket.toml
migrations/: 20230124171304_create_users.sql
src/: main.rs
