[package]
name = "learning_rocket"
version = "0.1.0"
edition = "2021"
authors = ["WildCommunist <alex@ceres.ventures>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.5.7", features = ["postgres", "uuid", "runtime-tokio-rustls"] }
rocket = "0.5.0-rc.2"
serde = "1.0.152"
uuid = "1.2.2"

